# actproof-events

./: .gitignore  CATALOGUE_LOADER_CONTRACT.md  CODE_OF_CONDUCT.md  CONTRIBUTING_ACTS.md  EVENTS-BUGFIX-NOTES.md  FINAL_BUILD_NOTES_1.8.0.md  GOVERNANCE.md  OFFICIAL_HTML_REBUILD_NOTE_2.5.0.md  README.md  RELEASE_CHECKLIST_1.8.0.md  RELEASE_CHECKLIST_1.8.2.md  RELEASE_CHECKLIST_2.8.0.md  RELEASE_NOTES_1.7.0.md  RELEASE_NOTES_1.8.0.md  RELEASE_NOTES_1.8.2.md  RELEASE_NOTES_1.9.0.md  RELEASE_NOTES_1.9.1.md  RELEASE_NOTES_2.0.0.md  RELEASE_NOTES_2.1.0.md  RELEASE_NOTES_2.2.0.md  RELEASE_NOTES_2.3.0.md  RELEASE_NOTES_2.4.0.md  RELEASE_NOTES_2.5.0.md  RELEASE_NOTES_2.6.0.md  RELEASE_NOTES_2.7.0.md  RELEASE_NOTES_2.8.0.md  RELEASE_NOTES_2.9.0.md  STEP-1-NOTES.md  STEP-3-NOTES.md  STEP6_2-BUGFIX-NOTES.md  build-1.8.0.sh  build-1.8.1.sh  build-1.8.2.sh  build-1.9.0.sh  build-1.9.1.sh  build-2.0.0.sh  build-2.1.0.sh  build-2.2.0.sh  build-2.3.0.sh  build-2.4.0.sh  (+7 more)
.github/workflows/: validate-catalogue.yml
actproof_events/: __init__.py  __main__.py  api.py  auth.py  bank_operability.py  bank_overlay.py  cli.py  cose_signing.py  dora_continuity_demo.py  exports.py  mcp_server.py  models.py  overlay_impact.py  profile_diff.py  profile_governance.py  quickstart.py  release_assurance.py  schema_mapping.py  scitt_profile.py  scitt_registration.py  services.py  source_binding.py  statement_profiles.py  store.py  text_capture.py
analysis/: README.md  evidence_layer_scores.json
assets/data/: dora.profile-view.json
catalogue/acts/actproof/: STEP-2-NOTES.md  software_release.v1.json  software_release.v1.test_vectors.json  standards_engagement_record.v1.json  standards_engagement_record.v1.test_vectors.json
catalogue/acts/corporate/: board_resolution_v1.test_vectors.json
catalogue/acts/democracy/: civil_society_mandate.settlement.v1.json  civil_society_mandate.settlement.v1.test_vectors.json
catalogue/acts/openproof/: software_release.v1.json  software_release.v1.test_vectors.json
docs/: BANK_IMPLEMENTATION_GUIDE.v1.md  BANK_OVERLAY_IMPACT.v1.md  BANK_POC_PACKAGE.v1.md  BANK_PROFILE_OVERLAY.v1.md  BINDING_CONTRACT.md  CANDIDATE_SCHEMA_MAPPING.v1.md  COSE_SIGNING_BOUNDARIES.v1.md  COSE_SOURCE_ATOM_SIGNING_PROTOTYPE.v1.md  COSE_SOURCE_ATOM_STATEMENT.v1.md  DORA_FIELD_BINDING_NOTES.md  FIELD_DERIVATION_CONTRACT.md  FIELD_LEVEL_SOURCE_BINDING.md  INTERNAL_MIRROR_GUIDE.v1.md  INTERNAL_SERVICE_MODE.v1.md  OFFICIAL_TEXT_EXCERPT_RULE.v1.md  PROFILE_DIFF_CHANGE_CONTROL.v1.md  PROFILE_GOVERNANCE.v1.md  PROFILE_VIEW_EXPORT.md  RECEIPT_VOCABULARY_ALIGNMENT.v1.md  RELEASE_ASSURANCE.v1.md  REVIEW_METHOD.v1.md  SCITT_RECEIPT_BOUNDARIES.v1.md  SCITT_REGISTRATION_RECEIPT_PILOT.v1.md  SCITT_SOURCE_ATOM_PROFILE.v1.md  open-internet-stack-fit.md  release-hardening-1.5.0rc1.md
docs/releases/: v1.4-rc1.md  v1.5-rc1.md
examples/: bank-overlay.example.json  external-schema.example.json
examples/cose/: source-atom.cose-sign1.example.cbor  source-atom.cose-sign1.metadata.example.json  source-atom.public-key.example.pem  source-atom.statement.example.json  source-atom.verify-result.example.json
examples/dora-301-302-continuity/: GENERATED_NOTE.md  README.md  commands.txt  local-log.json  manifest.json  profile-dependency.v1.cose-sign1.cbor  profile-dependency.v2.cose-sign1.cbor  source-atom.cose-sign1.cbor  source-atom.dev.public-key.pem  source-atom.statement.json
examples/dora-301-302-continuity/continuity/: continuity-check.txt  continuity-check.v1-to-v2.json
examples/dora-301-302-continuity/downstream-binding/: bank-x-reporting-form.binding.v1.json
examples/dora-301-302-continuity/profiles/: dora-incident-reporting-profile.v1.json  dora-incident-reporting-profile.v2.json
examples/dora-301-302-continuity/receipts/: profile-dependency.v1.receipt.json  profile-dependency.v2.receipt.json  source-atom.receipt.json
examples/scitt/: source-atom-manifest.example.json  source-atom.cose-sign1.placeholder.txt  source-atom.local-log.example.json  source-atom.local-receipt-verification.example.json  source-atom.local-receipt.example.json  source-atom.receipt.placeholder.txt  source-atom.statement.example.json
mapper/: .gitignore  HARDENING_NOTES.md  INTEGRATION.md  README.md  VERIFICATION.md  run_all.py
mapper/examples/dora/sources/: README.md
mapper/steps/: _interpretation_link.py  step1_source_dossier.py  step2_source_fragments.py  step3_legal_actions.py  step4_mapped_fields.py  step5_evidence_labels.py  step6_interpretation_decisions.py  step7_traceability_matrix.py  step8_profile_assembler.py
salt-erasure/: README.md  salt_erasure.py  test_vectors.json
scripts/: cellar_fetch.py  cellar_fetch_nis2.py  compute_test_vectors.py  deploy-v1.4-rc1.sh  evidence_layer_score.py  run-cellar-fetch-nis2.sh  run-cellar-fetch.sh  validate_catalogue.py  validate_source_atoms.py  validate_vectors.py
scripts/test_vector_inputs/: README.md  actproof_software_release_v1_001.json  actproof_standards_engagement_record_v1_001.json  democracy_civil_society_mandate_settlement_v1_001.json  eu_dora_ict_incident_notification_initial_v1_001.json  eudr_dds_v1_001.json  nis2_art20_v1_001.json  openproof_software_release_v1_001.input.json
spec/: actproof-events.spec.md  openproof-events.spec.md  schema_version_policy.md  vocabularies.md
spec/schemas/: act_catalogue_entry.v2.json  act_catalogue_entry.v3.json  act_profile.v2.json  act_profile.v3.json  field_derivations.v1.schema.json  profile_view.v1.schema.json  scitt_source_atom_statement.v1.schema.json  source_atoms.v1.schema.json
spec/scitt/: actproof.source_atom_statement.v1.schema.json
tests/: test_assessment.py  test_auth.py  test_bank_operability.py  test_bank_overlay.py  test_binding.py  test_binding_granularity.py  test_cose_signing.py  test_derivation.py  test_dora_continuity_demo.py  test_exports.py  test_local_api.py  test_mcp_auth.py  test_overlay_impact.py  test_profile_diff.py  test_profile_governance.py  test_release_assurance.py  test_schema_mapping.py  test_scitt_profile.py  test_scitt_registration.py  test_source_binding.py  test_text_capture.py
(+46 files in other folders)
