[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "actproof-events"
version = "1.6.0"
description = "Open catalogue, JSON schemas, source-bound act profiles, and CC0 conformance vectors for machine-readable organisational acts."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSES/CC0-1.0.txt"]
authors = [
  { name = "Deyan Paroushev", email = "deyan@advisa.tech" },
]
keywords = [
  "scitt",
  "ietf-scitt",
  "cose-receipts",
  "transparency",
  "verifiable-credentials",
  "rfc-8785",
  "canonicalization",
  "rfc-3161",
  "timestamping",
  "algorand",
  "evidence",
  "compliance",
  "dora",
  "eudr",
  "nis2",
  "csrd",
  "audit-trail",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Legal Industry",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business",
  "Typing :: Typed",
]

# actproof-events 1.5.0rc1 ships the catalogue, schema, and specification
# bytes as installed resources. There are no required runtime dependencies.
# Consumers that load the catalogue typically use the standard library
# (json, pathlib) and may optionally pull in jsonschema for full schema
# validation, which we leave to the consumer's discretion rather than
# bundling here.
dependencies = []

[project.optional-dependencies]
# Consumers that want full JSON Schema validation of catalogue entries can
# install this extra: pip install "actproof-events[schema-validation]"
schema-validation = [
  "jsonschema>=4.21",
]

# The optional REST API (developer face): pip install "actproof-events[api]"
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

# The optional MCP server (agent face): pip install "actproof-events[mcp]"
mcp = [
  "mcp>=1.2",
]

# Everything needed to run both servers locally.
serve = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "mcp>=1.2",
]

[project.scripts]
# Experimental, repo-local tooling: the ActProof Mapper pipeline exposed as one
# console command with subcommands. After `pip install -e .` from the repo, run
# `actproof-mapper run-all --example dora`. This dispatches to the step scripts
# under mapper/, which are present in a source checkout or editable install. It
# is NOT a public packaged SDK; the mapper is experimental and not on PyPI as a
# standalone package.
actproof-mapper = "actproof_events.cli:main"

# The optional servers, available when the matching extra is installed.
# actproof-api needs [api]; actproof-mcp needs [mcp].
actproof-api = "actproof_events.api:main"
actproof-mcp = "actproof_events.mcp_server:main"

[project.urls]
Homepage = "https://github.com/deyan-paroushev/actproof-events"
Repository = "https://github.com/deyan-paroushev/actproof-events"
Issues = "https://github.com/deyan-paroushev/actproof-events/issues"
Specification = "https://github.com/deyan-paroushev/actproof-events/blob/main/spec/actproof-events.spec.md"

# ─── Build configuration ────────────────────────────────────────────────────
#
# The repository keeps the catalogue, spec, and Python package source in
# separate top-level directories so that humans reading the repo and tools
# generating test vectors can find them at natural paths. The wheel rolls
# these into a single import-time hierarchy under actproof_events/data/, so
# that consumers can call actproof_events.get_catalogue_path() and receive
# a Path that resolves correctly whether the package is installed from a
# wheel, installed editable, or imported from a source checkout.

[tool.hatch.build.targets.wheel]
packages = ["actproof_events"]

[tool.hatch.build.targets.wheel.force-include]
# Catalogue, schemas, and the normative specification text are rolled into
# actproof_events/data/ so an installed copy is self-contained. The path
# accessors in actproof_events/__init__.py resolve files under that root.
"catalogue/acts" = "actproof_events/data/catalogue/acts"
"spec/schemas" = "actproof_events/data/schemas"
"spec/actproof-events.spec.md" = "actproof_events/data/spec/actproof-events.spec.md"
"spec/vocabularies.md" = "actproof_events/data/spec/vocabularies.md"
"spec/schema_version_policy.md" = "actproof_events/data/spec/schema_version_policy.md"
"CATALOGUE_LOADER_CONTRACT.md" = "actproof_events/data/CATALOGUE_LOADER_CONTRACT.md"
# Evidence-layer scores power the per-field origin (direct/derived/interpretive).
# They must ship in the wheel or origin silently degrades to "unscored".
"analysis/evidence_layer_scores.json" = "actproof_events/data/analysis/evidence_layer_scores.json"
# Field-level source-basis derivations from the Mapper. Empty until populated;
# every field falls back to the act-level source basis while it is empty.
"analysis/field_derivations.json" = "actproof_events/data/analysis/field_derivations.json"

[tool.hatch.build.targets.sdist]
include = [
  "/actproof_events",
  "/catalogue",
  "/spec",
  "/analysis",
  "/docs",
  "/scripts",
  "/mapper",
  "/salt-erasure",
  "/CATALOGUE_LOADER_CONTRACT.md",
  "/CONTRIBUTING_ACTS.md",
  "/LICENSE",
  "/LICENSES",
  "/README.md",
  "/pyproject.toml",
]
